<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:paddingHorizontal="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_request_permissions"
                    android:text="@string/request_permissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_height"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    app:endIconDrawable="@drawable/calendar_add_on_24px"
                    app:endIconMode="custom">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rg_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:text="@string/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:text="@string/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_info"
                    android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/device_mac_address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_device_mac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ble_key">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_ble_key"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <ViewSwitcher
                        android:id="@+id/view_switcher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_scan"
                            android:layout_marginTop="16dp"
                            android:text="@string/scan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.progressindicator.CircularProgressIndicator
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="true" />
                    </ViewSwitcher>

                    <ImageView
                        android:id="@+id/iv_device_scan"
                        android:src="@drawable/bluetooth_searching_24px"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:tint="?colorAccent"
                        android:visibility="invisible" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_result"
                    android:text="@string/no_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_record"
                        android:text="@string/record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <CheckBox
                        android:id="@+id/cb_auto_record"
                        android:text="@string/auto_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true" />

                    <CheckBox
                        android:id="@+id/cb_heart_rate"
                        android:text="@string/record_heart_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>